--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -2,7 +2,7 @@
 
 :root {
     --xx-button-text-color: #ffffff;
-    --xx-button-bg-color: #409EFF;
+    --xx-button-bg-color: #9595FB;
 
     --xx-desc-text-color: #3c3c3c;
 }
