--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -79,3 +79,30 @@
     padding: 8px 4px;
     font-size: 14px;
 }
+
+.history {
+    &-cotainer {
+        margin-top: 30px;
+    }
+    &-title {
+        margin: 0 0 10px 20px;
+    }
+    &-main {
+        width: 800px;
+        flex-wrap: wrap;
+    }
+    &-item {
+        font-size: 16px;
+        margin: 12px auto;
+        background-color: #fff;
+        padding: 10px 20px;
+        border-radius: 20px;
+        box-shadow: 2px 2px 1px 1px #e8e8e8;
+    }
+    &-head {
+        font-weight: bold;
+        font-size: 18px;
+        padding-bottom: 6px;
+        border-bottom: 1px solid #e8e8e8;
+    }
+}
